// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersQueries getUsers should return a paged list of users: #0 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T10:21:59.730Z,
      "email": "user2@silvernext.com",
      "firstName": "Benno",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "lastName": "Meysmans",
      "state": "ACTIVE",
      "updatedAt": 2020-01-05T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "email": "user5@silvernext.com",
      "firstName": null,
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "lastName": null,
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
    },
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "email": "user4@silvernext.com",
      "firstName": null,
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "lastName": null,
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user1@silvernext.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user3@silvernext.com",
      "firstName": "Jens",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "lastName": "De Craecker",
      "state": "REGISTERING",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 6,
    "totalCount": 6,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #1 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "email": "user4@silvernext.com",
      "firstName": null,
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "lastName": null,
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 2,
    "totalCount": 6,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #2 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user1@silvernext.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 1,
    "totalCount": 1,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #3 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "email": "user4@silvernext.com",
      "firstName": null,
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "lastName": null,
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user1@silvernext.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user3@silvernext.com",
      "firstName": "Jens",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "lastName": "De Craecker",
      "state": "REGISTERING",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T10:21:59.730Z,
      "email": "user2@silvernext.com",
      "firstName": "Benno",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "lastName": "Meysmans",
      "state": "ACTIVE",
      "updatedAt": 2020-01-05T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "email": "user5@silvernext.com",
      "firstName": null,
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "lastName": null,
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 6,
    "totalCount": 6,
  },
}
`;

exports[`UsersQueries getUsers should return an empty list if no users found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "totalCount": 0,
  },
}
`;
